Updated website with new changes

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <div class="main-menu__wrapper-inner">
                         <div class="main-menu__left">
                             <div class="main-menu__logo">
-                                <a href="index.html"><img src="" alt="">Asuna Salon</a>
+                                <a href="index.html"><img style="width: 80px;" src="assets/images/My-images/logo.avif" alt=""></a>
                             </div>
                         </div>
                         <div class="main-menu__main-menu-box">
@@ -206,7 +206,7 @@
 
                     <div class="swiper-slide">
                         <div class="image-layer"
-                            style="background-image: url(assets/images/My-images/Head-2.jpg);"></div>
+                            style="background-image: url(assets/images/My-images/Head-4.jpg);"></div>
                         <!-- /.image-layer -->
 
                         <div class="container">
@@ -229,7 +229,7 @@
 
                     <div class="swiper-slide">
                         <div class="image-layer"
-                            style="background-image: url(assets/images/My-images/Head-1.jpg);"></div>
+                            style="background-image: url(assets/images/My-images/Head-3.jpg);"></div>
 
                         <div class="container">
                             <div class="row">
@@ -291,7 +291,7 @@
                             <div class="welcome-one__img-box wow slideInLeft" data-wow-delay="100ms"
                                 data-wow-duration="2500ms">
                                 <div class="welcome-one__img">
-                                    <img src="assets/images/My-images/sec-2.jpg" alt="">
+                                    <img src="assets/images/My-images/Head-2.jpg" alt="">
                                     <div class="welcome-one__shape-1 float-bob-y">
                                         <img src="assets/images/shapes/welcome-one-shape-1.png" alt="">
                                     </div>
@@ -444,7 +444,7 @@
         <!--Video One Start-->
         <section class="video-one">
             <div class="video-one__bg jarallax" data-jarallax data-speed="0.2" data-imgPosition="50% 0%"
-                style="background-image: url(assets/images/My-images/sec-3.jpg);"></div>
+                style="background-image: url(assets/images/My-images/head-4.jpg);"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-xl-6 col-lg-6">
@@ -842,7 +842,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/instagram.jpg" alt="">
+                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -854,7 +854,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/instagram.jpg" alt="">
+                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -866,7 +866,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/instagram.jpg" alt="">
+                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -878,7 +878,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/instagram.jpg" alt="">
+                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -890,7 +890,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/instagram.jpg" alt="">
+                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -902,7 +902,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/instagram.jpg" alt="">
+                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -918,7 +918,7 @@
         <!--Spa Center Start-->
         <section class="spa-center">
             <div class="spa-center__bg jarallax" data-jarallax data-speed="0.2" data-imgPosition="50% 0%"
-                style="background-image: url(assets/images/My-images/sec-4.jpg);">
+                style="background-image: url(assets/images/My-images/head-4.jpg);">
             </div>
             <div class="spa-center__inner">
                 <div class="container">
