--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                                         <span class="icon-facial-mask"></span>
                                     </div>
                                 </div>
-                                <h3 class="services-one__title"><a href="#">Facial Care</a></h3>
+                                <h3 class="services-one__title"><a href="#">Colour Correction</a></h3>
                                 <p class="services-one__text">I was impresed by the moling services, not lorem ipsum is
                                     simply free text.</p>
                                 <div class="services-one__btn-box">
@@ -425,7 +425,7 @@
                                         <span class="icon-lotus"></span>
                                     </div>
                                 </div>
-                                <h3 class="services-one__title"><a href="#">Beauty Treatments</a></h3>
+                                <h3 class="services-one__title"><a href="#">Balyage Hilights</a></h3>
                                 <p class="services-one__text">I was impresed by the moling services, not lorem ipsum is
                                     simply free text.</p>
                                 <div class="services-one__btn-box">
@@ -622,7 +622,7 @@
         <!--Counter One End-->
 
         <!--Process One Start-->
-        <section class="process-one">
+        <!-- <section class="process-one">
             <div class="container">
                 <div class="process-one__inner">
                     <div class="process-one__shape-1"></div>
@@ -631,7 +631,6 @@
                         <h2 class="section-title__title">How It Works?</h2>
                     </div>
                     <div class="row">
-                        <!--Process One Single Start-->
                         <div class="col-xl-4 col-lg-4">
                             <div class="process-one__single">
                                 <div class="process-one__img-box">
@@ -646,8 +645,6 @@
                                     sed do eiusmod.</p>
                             </div>
                         </div>
-                        <!--Process One Single End-->
-                        <!--Process One Single Start-->
                         <div class="col-xl-4 col-lg-4">
                             <div class="process-one__single">
                                 <div class="process-one__img-box">
@@ -662,8 +659,6 @@
                                     sed do eiusmod.</p>
                             </div>
                         </div>
-                        <!--Process One Single End-->
-                        <!--Process One Single Start-->
                         <div class="col-xl-4 col-lg-4">
                             <div class="process-one__single">
                                 <div class="process-one__img-box">
@@ -678,12 +673,123 @@
                                     sed do eiusmod.</p>
                             </div>
                         </div>
-                        <!--Process One Single End-->
+                    </div>
+                </div>
+            </div>
+        </section> -->
+        <!--Process One End-->
+
+        <!--Services Two Start-->
+        <section class="services-two">
+            <div class="container">
+                <div class="services-two__inner">
+                    <div class="services-two__shape-1 float-bob-x">
+                        <img src="assets/images/shapes/services-two-shape-1.png" alt="">
+                    </div>
+                    <div class="row">
+                        <!--Services Two Single Start-->
+                        <div class="col-xl-6 col-lg-6">
+                            <div class="services-two__single">
+                                <h3 class="services-two__title">Massages & Prices</h3>
+                                <ul class="list-unstyled services-two__list">
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="services.html">Relaxation</a></h3>
+                                            <p>20 Minutes</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>$2.20</h4>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="services.html">Athlete Recovery</a></h3>
+                                            <p>30 Minutes</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>$4.20</h4>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="services.html">Thai</a></h3>
+                                            <p>40 Minutes</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>$3.99</h4>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="services.html">Hot Stones</a></h3>
+                                            <p>50 Minutes</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>$6.20</h4>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!--Services Two Single End-->
+                        <!--Services Two Single Start-->
+                        <div class="col-xl-6 col-lg-6">
+                            <div class="services-two__single">
+                                <h3 class="services-two__title">Therapies & Prices</h3>
+                                <ul class="list-unstyled services-two__list">
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="services.html">Face Masks</a></h3>
+                                            <p>20 Minutes</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>$3.99</h4>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="services.html">Manicure Day</a></h3>
+                                            <p>30 Minutes</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>$5.20</h4>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="services.html">Hair Removal</a></h3>
+                                            <p>40 Minutes</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>$5.58</h4>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="services.html">Nail Treatment</a></h3>
+                                            <p>50 Minutes</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>$2.30</h4>
+                                        </div>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <!--Services Two Single End-->
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-12">
+                            <div class="services-two__btn-box">
+                                <a href="#" class="thm-btn services-two__btn">Book Now</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!--Process One End-->
+        <!--Services Two End-->
+
 
         <!--Testimonial One Start-->
         <section class="testimonial-one">
