--- a/index.html
+++ b/index.html
@@ -690,42 +690,42 @@
                         <!--Services Two Single Start-->
                         <div class="col-xl-6 col-lg-6">
                             <div class="services-two__single">
-                                <h3 class="services-two__title">Massages & Prices</h3>
+                                <h3 class="services-two__title">Hair Styling & Hair Color</h3>
                                 <ul class="list-unstyled services-two__list">
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Relaxation</a></h3>
+                                            <h3><a href="services.html">Balyage Hilights</a></h3>
                                             <p>20 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>$2.20</h4>
+                                            <h4>£2.20</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Athlete Recovery</a></h3>
+                                            <h3><a href="services.html">Balyage Hilights</a></h3>
                                             <p>30 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>$4.20</h4>
+                                            <h4>£4.20</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Thai</a></h3>
+                                            <h3><a href="services.html">Balyage Hilights</a></h3>
                                             <p>40 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>$3.99</h4>
+                                            <h4>£3.99</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Hot Stones</a></h3>
+                                            <h3><a href="services.html">Balyage Hilights</a></h3>
                                             <p>50 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>$6.20</h4>
+                                            <h4>£6.20</h4>
                                         </div>
                                     </li>
                                 </ul>
@@ -735,42 +735,42 @@
                         <!--Services Two Single Start-->
                         <div class="col-xl-6 col-lg-6">
                             <div class="services-two__single">
-                                <h3 class="services-two__title">Therapies & Prices</h3>
+                                <h3 class="services-two__title">Treatments & Head Spa</h3>
                                 <ul class="list-unstyled services-two__list">
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Face Masks</a></h3>
+                                            <h3><a href="services.html">korean Head Spa</a></h3>
                                             <p>20 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>$3.99</h4>
+                                            <h4>£3.99</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Manicure Day</a></h3>
+                                            <h3><a href="services.html">korean Head Spa</a></h3>
                                             <p>30 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>$5.20</h4>
+                                            <h4>£5.20</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Hair Removal</a></h3>
+                                            <h3><a href="services.html">korean Head Spa</a></h3>
                                             <p>40 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>$5.58</h4>
+                                            <h4>£5.58</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Nail Treatment</a></h3>
+                                            <h3><a href="services.html">korean Head Spa</a></h3>
                                             <p>50 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>$2.30</h4>
+                                            <h4>£2.30</h4>
                                         </div>
                                     </li>
                                 </ul>
