--- a/index.html
+++ b/index.html
@@ -306,9 +306,8 @@
                                 <h2 class="section-title__title">Welcome to the
                                     <br> Asuna Salon</h2>
                             </div>
-                            <p class="welcome-one__text">There are many variations of passages of Lorem Ipsum available,
-                                but the majority have suffered alteration simply free text in some form, by injected
-                                humour.</p>
+                            <p class="welcome-one__text">This is home base salon. There are many variations of passages of
+                                Lorem Ipsum available, but the majority have suffered alteration simply free text in some form.`</p>
                             <ul class="welcome-one__points list-unstyled">
                                 <li>
                                     <div class="icon">
@@ -805,7 +804,7 @@
                                 <div class="section-title text-left">
                                     <span class="section-title__tagline">Customer Reviews</span>
                                     <h2 class="section-title__title">What They’re Talking
-                                        About Center</h2>
+                                        About Us</h2>
                                 </div>
                             </div>
                         </div>
@@ -1032,7 +1031,7 @@
                         <div class="spa-center__img">
                             <img src="assets/images/resources/spa-center-img-1.png" alt="">
                         </div>
-                        <h3 class="spa-center__title">Our Salon Center is the
+                        <h3 class="spa-center__title">Our Home Base Salon is the
                             <br> True Splendor</h3>
                         <div class="spa-center__btn-box">
                             <a href="#" class="thm-btn spa-center__btn">book now</a>
