--- a/index.html
+++ b/index.html
@@ -620,63 +620,6 @@
         </section>
         <!--Counter One End-->
 
-        <!--Process One Start-->
-        <!-- <section class="process-one">
-            <div class="container">
-                <div class="process-one__inner">
-                    <div class="process-one__shape-1"></div>
-                    <div class="section-title text-center">
-                        <span class="section-title__tagline">3 easy steps</span>
-                        <h2 class="section-title__title">How It Works?</h2>
-                    </div>
-                    <div class="row">
-                        <div class="col-xl-4 col-lg-4">
-                            <div class="process-one__single">
-                                <div class="process-one__img-box">
-                                    <div class="process-one__img">
-                                        <img src="assets/images/My-images/process-1-1.jpg" alt="">
-                                    </div>
-                                    <div class="process-one__count"></div>
-                                </div>
-                                <h3 class="process-one__title"><a href="services.html">Meeting</a></h3>
-                                <p class="process-one__text">Lorem ipsum dolor sit amet, consectetur notted adipisicing
-                                    elit
-                                    sed do eiusmod.</p>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4">
-                            <div class="process-one__single">
-                                <div class="process-one__img-box">
-                                    <div class="process-one__img">
-                                        <img src="assets/images/My-images/process-1-2.jpg" alt="">
-                                    </div>
-                                    <div class="process-one__count"></div>
-                                </div>
-                                <h3 class="process-one__title"><a href="services.html">Treatment</a></h3>
-                                <p class="process-one__text">Lorem ipsum dolor sit amet, consectetur notted adipisicing
-                                    elit
-                                    sed do eiusmod.</p>
-                            </div>
-                        </div>
-                        <div class="col-xl-4 col-lg-4">
-                            <div class="process-one__single">
-                                <div class="process-one__img-box">
-                                    <div class="process-one__img">
-                                        <img src="assets/images/My-images/process-1-3.jpg" alt="">
-                                    </div>
-                                    <div class="process-one__count"></div>
-                                </div>
-                                <h3 class="process-one__title"><a href="services.html">Finalizing</a></h3>
-                                <p class="process-one__text">Lorem ipsum dolor sit amet, consectetur notted adipisicing
-                                    elit
-                                    sed do eiusmod.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section> -->
-        <!--Process One End-->
 
         <!--Services Two Start-->
         <section class="services-two">
@@ -689,42 +632,51 @@
                         <!--Services Two Single Start-->
                         <div class="col-xl-6 col-lg-6">
                             <div class="services-two__single">
-                                <h3 class="services-two__title">Hair Styling & Hair Color</h3>
+                                <h3 class="services-two__title">Hair Styling & Colouring</h3>
                                 <ul class="list-unstyled services-two__list">
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Balyage Hilights</a></h3>
-                                            <p>20 Minutes</p>
+                                            <h3><a href="#">Cut, wash & blowdry</a></h3>
+                                            <p>45 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>£2.20</h4>
+                                            <h4>£30.00</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Balyage Hilights</a></h3>
+                                            <h3><a href="#">Dry Haircut</a></h3>
                                             <p>30 Minutes</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>£4.20</h4>
+                                            <h4>£18.00</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Balyage Hilights</a></h3>
-                                            <p>40 Minutes</p>
+                                            <h3><a href="#">Wash, Haircut & Blow Dry (Afro Hair)</a></h3>
+                                            <p>2 hrs</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>£3.99</h4>
+                                            <h4>£50.00</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">Balyage Hilights</a></h3>
-                                            <p>50 Minutes</p>
+                                            <h3><a href="#">Root Colour with Blow Dry</a></h3>
+                                            <p>1 hr 35 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>£6.20</h4>
+                                            <h4>£35.00</h4>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="#">Balyage</a></h3>
+                                            <p>2 hrs 15 mins</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>£130.00</h4>
                                         </div>
                                     </li>
                                 </ul>
@@ -738,38 +690,47 @@
                                 <ul class="list-unstyled services-two__list">
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">korean Head Spa</a></h3>
-                                            <p>20 Minutes</p>
+                                            <h3><a href="">korean Head Spa</a></h3>
+                                            <p>2 hrs 15 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>£3.99</h4>
+                                            <h4>Coming Soon</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">korean Head Spa</a></h3>
-                                            <p>30 Minutes</p>
+                                            <h3><a href="#">Hair Conditioning Treatment</a></h3>
+                                            <p>1 hr 35 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>£5.20</h4>
+                                            <h4>£25.00</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">korean Head Spa</a></h3>
-                                            <p>40 Minutes</p>
+                                            <h3><a href="#">INOA anmonia free Colour</a></h3>
+                                            <p>2 hrs</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>£5.58</h4>
+                                            <h4>£40.00</h4>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="services-two__services-name">
-                                            <h3><a href="services.html">korean Head Spa</a></h3>
-                                            <p>50 Minutes</p>
+                                            <h3><a href="#">T-Section Highlights with Blow Dry</a></h3>
+                                            <p>2 hrs 35 mins</p>
                                         </div>
                                         <div class="services-two__services-price">
-                                            <h4>£2.30</h4>
+                                            <h4>£65.00</h4>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="services-two__services-name">
+                                            <h3><a href="#">Facial - Deep Cleansing</a></h3>
+                                            <p>1 hr</p>
+                                        </div>
+                                        <div class="services-two__services-price">
+                                            <h4>£45.00</h4>
                                         </div>
                                     </li>
                                 </ul>
@@ -780,7 +741,7 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="services-two__btn-box">
-                                <a href="#" class="thm-btn services-two__btn">Book Now</a>
+                                <a href="#" class="thm-btn services-two__btn">Full Menu</a>
                             </div>
                         </div>
                     </div>
