--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
+                                <img src="assets/images/My-images/insta-1.webp" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -920,7 +920,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
+                                <img src="assets/images/My-images/insta-2.webp" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -932,7 +932,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
+                                <img src="assets/images/My-images/insta-3.webp" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -944,7 +944,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
+                                <img src="assets/images/My-images/insta-4.webp" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -956,7 +956,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
+                                <img src="assets/images/My-images/insta-5.webp" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
@@ -968,7 +968,7 @@
                     <div class="col-xl-2 col-lg-4 col-md-6">
                         <div class="instagram__single">
                             <div class="instagram__img">
-                                <img src="assets/images/My-images/sec-2-1.jpg" alt="">
+                                <img src="assets/images/My-images/insta-6.webp" alt="">
                                 <div class="instagram__img-icon">
                                     <a href="#"><span class="fab fa-instagram"></span></a>
                                 </div>
