--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                     </ul> -->
                                 </li>
                                 <li class="">
-                                    <a href="#">Pages</a>
+                                    <a href="#">Pricing</a>
                                     <!-- <ul>
                                         <li><a href="team.html">Team Members</a></li>
                                         <li><a href="pricing-plans.html">Pricing Plans</a></li>
@@ -439,6 +439,94 @@
             </div>
         </section>
         <!--Services One End-->
+
+        <!--Services Setails One Start-->
+        <section style="padding-top: 0px; padding-bottom: 120px;" class="services-details-one">
+            <div class="container">
+                <div class="services-details-one__massages">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6">
+                            <div class="services-details-one__massages-left">
+                                <h3 class="services-details-one__massages-title">Head Spa</h3>
+                                <p class="services-details-one__massages-text-1">Lorem ipsum is simply free text used by
+                                    copytyping
+                                    refreshing. Neque porro est qui dolorem ipsum quia quaed inventore veritatis et
+                                    quasi
+                                    architecto beatae vitae dicta sunt explicabo. Aelltes port lacus quis enim var sed
+                                    efficitur turpis gilla sed sit amet finibus eros.</p>
+                                <p class="services-details-one__massages-text-2">Duis aute irure dolor in this helps to
+                                    break up
+                                    scar
+                                    tissue that forms following reprehenderit in voluptate velit esse cillum.</p>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-6">
+                            <div class="services-details-one__massages-right">
+                                <div class="services-details-one__massages-img">
+                                    <img src="assets/images/My-images/Head-4.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="services-details-one__benefits">
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6">
+                            <div class="services-details-one__benefits-left">
+                                <div class="services-details-one__benefits-img">
+                                    <img src="assets/images/My-images/sec-2.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-6 col-lg-6">
+                            <div class="services-details-one__benefits-right">
+                                <h3 class="services-details-one__benefits-title">The Benefits</h3>
+                                <p class="services-details-one__benefits-text">Lorem ipsum is simply free text used by
+                                    copytyping refreshing. Neque porro est qui dolorem ipsum quia quaed inventore
+                                    veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+                                <ul class="services-details-one__benefits-points list-unstyled">
+                                    <li>
+                                        <div class="icon">
+                                            <span class="fa fa-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Nemo enim ipsam voluptatem quia voluptas.</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="fa fa-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Accusamus et iusto odio dignissimos ducimus.</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="fa fa-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Nam libero tempore, cum soluta nobis est eligend.</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <span class="fa fa-check"></span>
+                                        </div>
+                                        <div class="text">
+                                            <p>Accusamus et iusto odio dignissimos ducimus.</p>
+                                        </div>
+                                    </li>
+                                </ul>
+                                <p class="services-details-one__benefits-text">Lorem ipsum is simply free text used by
+                                    copytyping refreshing. Neque porro est qui dolorem ipsum quia quaed inventore.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!--Services Setails One End-->
 
         <!--Video One Start-->
         <section class="video-one">
